--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "generator-liferay-fragments",
-  "version": "1.2.2",
-  "description": "Yeoman generator for creating and maintaining Liferay Fragment projects",
-  "homepage": "https://www.npmjs.com/package/generator-liferay-fragments",
+  "name": "liferay-fragment-toolkit",
+  "version": "2.0.0",
+  "description": "Toolkit for creating and maintaining Liferay Fragment projects",
+  "homepage": "https://www.npmjs.com/package/liferay-fragment-toolkit",
   "author": {
     "name": "Pablo Molina",
     "email": "pablo.molina@liferay.com"
   },
-  "files": [
-    "generators",
-    "utils"
-  ],
-  "main": "generators/index.js",
+  "main": "src/cli.js",
+  "bin": {
+    "lft": "src/cli.js",
+    "liferay-fragment-toolkit": "src/cli.js"
+  },
   "keywords": [
     "liferay",
-    "yeoman-generator"
+    "toolkit"
   ],
   "devDependencies": {
     "@types/express": "4.17.0",
@@ -36,9 +36,7 @@
     "lint-staged": "8.2.1",
     "prettier": "1.18.2",
     "tmp": "0.1.0",
-    "typescript": "3.5.2",
-    "yeoman-assert": "3.1.1",
-    "yeoman-test": "2.0.0"
+    "typescript": "3.5.2"
   },
   "engines": {
     "node": ">= 8.0.0",
@@ -53,8 +51,7 @@
     "mkdirp": "0.5.1",
     "request": "2.88.0",
     "voca": "1.4.0",
-    "ws": "7.0.1",
-    "yeoman-generator": "4.0.1"
+    "ws": "7.0.1"
   },
   "jest": {
     "testEnvironment": "node",
@@ -82,6 +79,6 @@
     "lint": "eslint ./generators/ ./utils/",
     "test": "jest"
   },
-  "repository": "p2kmgcl/generator-liferay-fragments",
+  "repository": "liferay/liferay-fragment-toolkit",
   "license": "MIT"
 }
