--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@types/glob": "7.1.1",
     "@types/jest": "24.0.15",
     "@types/jszip": "3.1.6",
+    "@types/listr": "^0.14.2",
     "@types/mkdirp": "0.5.1",
     "@types/node": "8.10.49",
     "@types/request": "2.48.1",
+    "@types/rimraf": "^2.0.2",
     "@types/tmp": "0.1.0",
     "@types/voca": "1.4.0",
     "@types/ws": "6.0.1",
@@ -45,11 +47,17 @@
   "dependencies": {
     "chalk": "2.4.2",
     "chokidar": "3.0.1",
+    "commander": "^3.0.0",
+    "enquirer": "^2.3.1",
+    "execa": "^2.0.4",
     "express": "4.17.1",
     "glob": "7.1.1",
     "jszip": "3.1.5",
+    "listr": "^0.14.3",
+    "log-symbols": "^3.0.0",
     "mkdirp": "0.5.1",
     "request": "2.88.0",
+    "rimraf": "^3.0.0",
     "voca": "1.4.0",
     "ws": "7.0.1"
   },
